# marybrowns-geoguessr-mapgen

./: locations.csv  locations.json  mapgen.py  pyproject.toml
